# lavish-rust-blog-backend

./: Cargo.toml  build.rs  deploy.sh  docker-compose.yml  packaged.yaml  template.yaml
.lambda-rust/: install  package
src/: api.rs  database.rs  main.rs  schema.rs
src/api/: mod.rs
src/api/comments/: crud.rs  mod.rs
src/api/posts/: crud.rs  mod.rs
src/api/users/: crud.rs  mod.rs
