[package]
name = "lavish-blog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.1.0", features = ["mysql"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-tls = "0.2.8"  
rocket_cors = "0.6.0"
lambda_http = "0.11.1"
tokio = { version = "1", features = ["macros"] }
chrono = "0.4.38"

[build]
target = "x86_64-unknown-linux-gnu"
